<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetails"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="8dp"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tvSexDetails"
                style="@style/listText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sex"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNameDetails"
                style="@style/listText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/nameList"
                app:layout_constraintStart_toEndOf="@+id/tvSexDetails"
                app:layout_constraintTop_toTopOf="@+id/tvSexDetails" />

            <TextView
                android:id="@+id/tvLastNameDetails"
                style="@style/listText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/lastNamelist"
                app:layout_constraintStart_toEndOf="@+id/tvNameDetails"
                app:layout_constraintTop_toTopOf="@+id/tvNameDetails" />

            <TextView
                android:id="@+id/tvAgeDetails"
                style="@style/detailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="@+id/tvSexDetails"
                app:layout_constraintTop_toBottomOf="@+id/tvSexDetails" />

            <TextView
                android:id="@+id/tvDetails"
                style="@style/detailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:paddingLeft="8dp"
                android:paddingRight="16dp"
                android:text="@string/detailsList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvAgeDetails"
                app:layout_constraintTop_toBottomOf="@+id/tvAgeDetails" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>